<resources>
    <string name="app_name">BringThemHome</string>
    <string name="kidnapped">Kidnapped</string>
    <string name="days">DAYS</string>
    <string name="hrs">HRS</string>
    <string name="min">MIN</string>
    <string name="sec">SEC</string>
    <string name="activities">Abducted</string>
    <string name="released">Returned</string>
    <string name="before_23">Before 23</string>
    <string name="dd" translatable="false">DD</string>
    <string name="hh" translatable="false">HH</string>
    <string name="mm" translatable="false">MM</string>
    <string name="ss" translatable="false">SS</string>
    <string name="all_kidnapped">All Kidnapped</string>
    <string name="search">search</string>
    <string name="name">name</string>
    <string name="gender">gender</string>
    <string name="age">age</string>
    <string name="min_age">from</string>
    <string name="max_age">to</string>
    <string name="couldnt_connect_to_server">Couldn\'t connect to server</string>
    <string name="city">city</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="none">none</string>
    <string name="age_range">Select an age range</string>
    <string name="ok">OK</string>
    <string name="selected_age_range">Selected age range</string>
    <string name="cancel">CANCEL</string>
    <string name="empty">all</string>
    <string name="copied">The information has been copied</string>
</resources>