<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".ui.screens.HomePageFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layoutDirection="ltr"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/tvDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="monospace"
            android:paddingEnd="10dp"
            android:text="@string/dd"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tvHrs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="@string/hh"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tvMin"
            app:layout_constraintStart_toEndOf="@id/tvDays"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="@string/mm"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tvSec"
            app:layout_constraintStart_toEndOf="@id/tvHrs"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="@string/ss"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvMin"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDaysName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/days"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tvDays"
            app:layout_constraintStart_toStartOf="@id/tvDays"
            app:layout_constraintTop_toBottomOf="@id/tvDays" />

        <TextView
            android:id="@+id/tvHrsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/hrs"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tvHrs"
            app:layout_constraintStart_toStartOf="@id/tvHrs"
            app:layout_constraintTop_toBottomOf="@id/tvHrs" />

        <TextView
            android:id="@+id/tvMinName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/min"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tvMin"
            app:layout_constraintStart_toStartOf="@id/tvMin"
            app:layout_constraintTop_toBottomOf="@id/tvMin" />

        <TextView
            android:id="@+id/tvSecName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/sec"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tvSec"
            app:layout_constraintStart_toStartOf="@id/tvSec"
            app:layout_constraintTop_toBottomOf="@id/tvSec" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />


</LinearLayout>
